DevTools/nidium: Add overflow hidden on body

--- a/nidium/src/index.html
+++ b/nidium/src/index.html
@@ -14,6 +14,7 @@
 		}
 
         body {
+            overflow:hidden;
             color: #2c3e50;
             background:#FFF;
             color: #34495e;
