Nidium: Fix discovery loader position

--- a/nidium/src/index.html
+++ b/nidium/src/index.html
@@ -64,8 +64,8 @@
   <body style="margin:0;padding:0;width:100%;height:100%;">
     <div id="nidiumDiscovery">
         <h2>
-			<div style="float:left">Looking for Nidium instances running on your network</div>
-			<div style="float:left;margin-left:20px;"><div class="loading"></div></div>
+			Looking for Nidium instances running on your network
+			<span style="position:absolute;padding-left:25px;"><div class="loading"></div></span>
 		</h2>
 		<br style="clear:both"/>
         <ul id="nidiumList">
