--- a/nidium/src/index.html
+++ b/nidium/src/index.html
@@ -72,7 +72,7 @@
         </ul>
     </div>
     <div id="devToolsContainer" style="width:100%;height:100%">
-        <iframe id="devTools" style="border:0;min-height:100vh;min-width:100vw;"></iframe>
+        <webview id="devTools" style="border:0;min-height:100vh;min-width:100vw;"></webview>
     </div>
 
     <script>
